# Exana

./: .gitignore  .gitmodules  CMakeList.txt  CMakeLists.txt  COPYRIGHT  ExanaDBT.h  LICENSE  OrderPatMakeStr.cpp  README.md  cacheSim.cpp  cacheSim.h  copyright  file.cpp  fini.cpp  fini.h  generateDot.cpp  generateDot.h  getOptions.cpp  getOptions.h  idorder.h  init.sh  instStat.cpp  loopContextProf.cpp  loopContextProf.h  loopMarkers.cpp  main.cpp  main.h  makefile.rules  memAna.cpp  memAna.h  print.cpp  replaceRtn.cpp  result.txt  runc2simset.sh  runmem.sh  sampling.cpp  sampling.h  staticAna.cpp  staticAna.h  test  (+2 more)
exanasrc/: MemPat.cpp  MemPat.h  MemPatMakeStr.cpp  MemPatMakeStr.h  OrderPat.cpp  OrderPat.h  OrderPatMakeStr.h  cacheSim.cpp  file.cpp  file.h  generateDot.cpp  generateDot.h  getOptions.h  idorder.cpp  instStat.cpp  instStat.h  loopContextProf.h  loopMarkers.h  main.cpp  main.h  makefile.rules  print.cpp  print.h  replaceRtn.h  staticAna.cpp
lib/: CMakeLists.txt  memtrace_simple.c  memtrace_x86.c  wrapper.cpp  wrapper.h
src/: CMakeLists.txt  Cache.hpp  CacheMemory.cpp  CacheMemory.hpp  CacheSim.cpp  CacheSim.hpp  FullyAssociativeCacheMemory.cpp  FullyAssociativeCacheMemory.hpp  MemData.cpp  MemData.hpp  MemoryEntry.cpp  MemoryEntry.hpp  SetAssociativeCacheMemory.cpp  SetAssociativeCacheMemory.hpp  Utils.cpp  Utils.hpp  main.cpp
